[package]
name = "archpkg_cachegit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
git2 = "0.18.1"
pkgbuild = { git = "https://github.com/7Ji/pkgbuild-rs.git", version = "0.1.0" }
url = "2.5.0"
